Partial_14Dec2021/force-app/main/default/objects/SMSMetaData__mdt/SMSMetaData__mdt.object-meta.xml
<CustomObject>
    <label>SMSMetaData</label>
    <pluralLabel>SMSMetaDatas</pluralLabel>
</CustomObject>