Partial_14Dec2021/force-app/main/default/objects/SMSMetaData__mdt/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Available</fullName>
                <default>true</default>
                <label>Customer Not Available</label>
            </value>
            <value>
                <fullName>Problem Resolved</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>