Partial_14Dec2021/force-app/main/default/objects/SMSMetaData__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>