Partial_14Dec2021/force-app/main/default/objects/SMSMetaData__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Re-Open</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Work Order Acceptance Pending</fullName>
            </value>
            <value>
                <fullName>Work Order Accepted</fullName>
            </value>
            <value>
                <fullName>Completed by Contractor</fullName>
            </value>
            <value>
                <fullName>Acceptance Pending</fullName>
            </value>
            <value>
                <fullName>Completed by Plumber</fullName>
            </value>
            <value>
                <fullName>Day Batch</fullName>
            </value>
            <value>
                <fullName>Before Day Batch</fullName>
            </value>
            <value>
                <fullName>Already Present</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>