Partial_14Dec2021/force-app/main/default/objects/SMSMetaData__mdt/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <label>TemplateId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>